<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/calculadora"
        android:layout_width="198dp"
        android:layout_height="157dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/namepro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calculadora" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="209dp"
        android:layout_height="185dp"
        android:layout_marginBottom="32dp"

        android:src="@drawable/loader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basica"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:id="@+id/proyecto"
        android:layout_width="293dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/proyec"
        android:textColor="#F521455A"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proy" />

    <TextView
        android:id="@+id/basica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/basica"
        android:textColor="#F521455A"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proyecto" />

    <TextView
        android:id="@+id/proy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/namepro"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculadora" />
</androidx.constraintlayout.widget.ConstraintLayout>